# cs-bachelor

./: .gitignore  List.cc  README.md
IPI/Übung04/: Aufgabe2.cc  Aufgabe2a.cc
IPI/Übung05/: Aufgabe2a.cc  Aufgabe2b.cc  Aufgabe3.cc
IPI/Übung06/: Nr1.cc  Nr2.txt  Nr4.cc  Nr4new.cc
IPI/Übung07/: Aufgabe1b.cc
IPI/Übung08/: fcpp.hh  haseundigel.cc
IPI/Übung10/Nr1/: FehlerWert.h  Fehlerrechnung.cc
IPI/Übung10/Nr2/: LineCounter.cc  faust-a.txt
IPI/Übung10/Nr3/: TwoDBoolArray.cc  TwoDBoolArray.h
IPI/Übung11/: Nr3.cc  compiling_error.txt  main.cc  nr3.h  vector.hh
IPK/Übung04/: Aufgabe2.cc  Aufgabe3.cc  potenz.cc
IPK/Übung05/: Aufgabe1.cc  Aufgabe2.cc  Aufgabe2a,b.cc  Aufgabe2c,d.cc  Aufgabe2c.cc
IPK/Übung06/: normal.cc  readvector.cc  statistics.cc  statistics.hh  uniform.cc
IPK/Übung06/01/: readvector.cc  statistics.cc
IPK/Übung06/02/: CMakeLists.txt  normal.cc  readvector.cc  statistics.cc  test_mean.cc  test_median.cc
IPK/Übung06/02/releasebuild/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  normal  readvector  uniform
IPK/Übung06/03/: letterfrequencies.cc
IPK/Übung06/04/: total.txt  wordfrequencies.cc
IPK/Übung07/01/: point.cc  point.hh  polygon.hh
IPK/Übung08/: Aufgabe1.cc  compiling_error.txt  statisticsdriver.cc  t_swap.hh
IPK/Übung08/Nr2/: compiling_error.txt  statistics.hh  statisticsdriver.cc
IPK/Übung08/Nr2/cMake/: statistics.hh  (+1 more)
IPK_Exercises/: drawmain.cpp  getline.cc  helloworld.cc  inputoutput.cc  pixie.h  pixie.h.gch  sprite.h  sprite.h.gch
Übungen/: Virtual-Zoo.cc  chinesen.txt  output.txt  test.cc
